[package]
name = "yee-panel"
version = "0.1.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
app_dirs = "1.2"
log = "0.4"
serde_derive = "1.0.32"
serde = "1.0.32"
error-chain = "0.12"
toml = "0.4.5"
jsonrpc-client-transports = "12.1.0"
jsonrpc-core = "10.0.1"
jsonrpc-core-client = "12.1.0"
jsonrpc-derive = "10.0.1"
pubsub = { package = "jsonrpc-pubsub", version = "10.0.1" }
serde_json = "1.0"
futures = "0.1.17"
rand = "0.6.5"
num-bigint = "0.2.2"
impl-serde = "0.1"
exit-future = "0.1"
http = { package = "jsonrpc-http-server", version = "10.0.1" }
ws = { package = "jsonrpc-ws-server", version = "10.0.1" }
env_logger = "0.7.1"
