[package]
name = "yee-panel"
version = "0.4.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
app_dirs = "1.2"
log = "0.4"
serde_derive = "1.0.32"
serde = "1.0.32"
error-chain = "0.12"
toml = "0.4.5"
jsonrpc-client-transports = "12.1.0"
jsonrpc-core = "10.0.1"
jsonrpc-core-client = "12.1.0"
jsonrpc-derive = "10.0.1"
pubsub = { package = "jsonrpc-pubsub", version = "10.0.1" }
serde_json = "1.0"
futures = "0.1.17"
rand = "0.6.5"
num-bigint = "0.2.2"
impl-serde = "0.1"
exit-future = "0.1"
http = { package = "jsonrpc-http-server", version = "10.0.1" }
ws = { package = "jsonrpc-ws-server", version = "10.0.1" }
env_logger = "0.7.1"
primitive-types = "0.2"
hex = "0.4.0"
twox-hash = "1.5"
byteorder = "1.3"
lazy_static = "1.4.0"
mut_static = "5.0.0"
tokio = "0.1.22"
parity-codec = { version = "3.5", features = ["derive"] }
yee-signer = { git = "https://github.com/yeeco/yee-signer", tag="v0.5.0"}
yee-runtime = { git = "https://github.com/yeeco/yeeroot", branch = "master" }
yee-primitives = { git = "https://github.com/yeeco/yeeroot", branch = "master" }
yee-sharding = { git = "https://github.com/yeeco/yeeroot", branch = "master" }
yee-sharding-primitives = { git = "https://github.com/yeeco/yeeroot", branch = "master" }
srml-support = { package = "srml-support", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
srml-system = { package = "srml-system", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
substrate-primitives =  { package = "substrate-primitives", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
runtime-primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
